<resources>
    <string name="app_name">Habit Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="habit_name">Habit Name</string>
    <string name="enter_habit">Enter Habit</string>
    <string name="repetition">Repetition</string>
    <string name="no_of_repetition">No of Repetition</string>
    <string name="priority">priority</string>
    <string name="action_insert_dummy_data">action_inset_dummy_data</string>
    <string name="priority_unknown">Unknown</string>
    <string name="priority_high">High</string>
    <string name="priority_low">Low</string>
    <string name="save">SAVE</string>
    <string name="delete">Delete</string>
</resources>
